--- a/src/components/PhoneInput/style.scss
+++ b/src/components/PhoneInput/style.scss
@@ -35,7 +35,9 @@
     }
 
     .react-international-phone-country-selector-dropdown {
-      width: 95px;
+      width: 110px;
+      border: none;
+      outline: none;
     }
 
     .react-international-phone-country-selector-button:hover {
