--- a/src/assets/scss/dashboard/wallet.module.scss
+++ b/src/assets/scss/dashboard/wallet.module.scss
@@ -1,73 +1,45 @@
-.wallet {
-  margin-bottom: 1.5rem;
-  &__item {
-    border: 1px solid rgba(3, 4, 27, 0.1);
-    padding: 15px 20px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    &__icon {
-      min-width: 90px;
-      display: flex;
-      align-items: center;
-      img {
-        width: 18px;
-        margin-left: 10px;
-      }
+.mobile-view {
+  display: none !important;
+  .crypto-name {
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+  .crypto-img {
+    width: 64px;
+    object-fit: cover;
+    margin: auto;
+  }
+  button {
+    width: 150px;
+  }
+}
+
+.balance {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  &__value {
+    margin-left: 30px;
+    strong {
+      font-size: 2em;
+      font-weight: 500;
     }
-    &__title {
-      font-size: 0.95em;
-      color: rgba(3, 4, 27, 0.5);
-      display: inline-block;
-      margin: 0;
-    }
-    &__subtitle {
-      font-size: 0.75em;
-      color: rgba(3, 4, 27, 0.5);
-      display: block;
-      margin-top: 1px;
-    }
-    &__price {
-      font-size: 0.85em;
+    small {
+      font-size: 0.4375em;
       font-weight: 400;
-      line-height: 0.75em;
+      margin-right: 5px;
     }
-    &__actions {
+  }
+  &__action {
       margin-right: auto;
-      button {
-        font-size: 0.975em;
-        margin-right: 5px;
-        padding: 8px 35px;
-        border-radius: 7px;
-        line-height: 1rem;
-        border-width: 2px;
-        font-weight: 500;
-      }
-      a {
-        font-size: 0.875em;
-        font-weight: 500;
-        color: #111bff !important;
-        text-decoration: none !important;
-        cursor: pointer;
-      }
+    & > .btn {
+      min-width: 220px;
     }
-    .available-balance {
-      display: block;
-      text-align: center;
-      font-size: 12px;
-      text-align: left;
-      margin-top: 0.5rem;
+    .btn + .btn {
+      margin-right: 8px;
     }
-  }
-  .usdt-box {
-    border: 1px solid rgb(3 143 143 / 0.29);
-  }
-  .lir-box {
-    border: 1px solid rgb(249 0 0 / 20%);
-  }
-  &__loading--item {
-    height: 120px;
-    width: 100%;
   }
 }
 
@@ -119,10 +91,156 @@
   }
 }
 
-.transactions {
-  overflow-x: auto;
-  .tabs {
+.bank-name-input {
+  .input-prepend {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+
+    .bank-logo {
+      height: 48px;
+      line-height: 48px;
+      font-size: 0.75rem;
+      box-shadow: none;
+      border-left-color: transparent;
+      border-radius: 10px;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+      border: 0;
+      display: flex;
+      align-items: center;
+      padding: 0.375rem 0.75rem;
+      font-weight: 400;
+      color: #212529;
+      text-align: center;
+      white-space: nowrap;
+      background-color: #e9ecef;
+      & > img {
+        width: 62%;
+        margin: 0 auto;
+      }
+    }
+  }
+  & > .input {
+    background-color: #e9ecef !important;
+    opacity: 1 !important;
+    position: relative !important;
+    flex: 1 1 auto !important;
+    width: 1% !important;
+    min-width: 0 !important;
+    border: none !important;
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+    border-top-left-radius: 10px !important;
+    border-bottom-left-radius: 10px !important;
+  }
+}
+
+.iban-text {
+  display: block;
+  font-size: 13px;
+}
+.table-view {
+  thead th {
+    font-size: 0.75em;
+    font-weight: 500;
+    color: rgba(3, 4, 27, 0.4);
+    white-space: nowrap;
+  }
+  tbody tr:last-child td {
+    border: none;
+  }
+  tbody td {
+    font-size: 0.875em;
+    font-weight: 500;
+    color: #03041b;
+  }
+
+  .crypto-img {
+    max-width: 15px;
+    margin-left: 12px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .crypto-name {
+    color: rgba(3, 4, 27, 0.5) !important;
+  }
+}
+
+.silver-button {
+  min-width: 100px;
+  padding: 0 !important;
+  height: 36px;
+  line-height: 32px !important;
+  border-radius: 7px !important;
+  color: #03041b;
+  background-color: rgba(3, 4, 27, 0.05);
+  border-color: transparent;
+  font-size: 1rem !important;
+  font-weight: 500 !important;
+  border-width: 2px !important;
+  &:hover {
+    color: #03041b;
+    background-color: rgba(3, 4, 27, 0.1);
+    border-color: transparent;
+  }
+}
+.transaction-button {
+  display: inline-block;
+  min-width: 100px;
+  padding: 0 !important;
+  height: 36px;
+  line-height: 32px !important;
+  border-radius: 7px !important;
+  color: #111bff;
+  border: 1px solid #111bff;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer !important;
+  user-select: none;
+  transition:
+    color 0.15s ease-in-out,
+    background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
+  &:hover,
+  &:active {
+    color: #fff;
+    background-color: #111bff;
+    border-color: #111bff;
+  }
+}
+
+.lir-icon {
+  width: 20px !important;
+}
+
+.bank-icon {
+  img {
+    width: 24px;
+    border-radius: 50%;
+    margin: 0 5px;
+  }
+}
+
+.english-number,
+.english-number button {
+  font-family: arial !important;
+}
+
+.font-small * {
+  font-size: 0.7rem;
+}
+
+.data-tab-container {
+  display: flex;
+  flex-direction: column;
+  .data-tab {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     flex-wrap: nowrap;
+    border-bottom: 1px solid rgba(3, 4, 27, 0.03);
     &__item {
       border: none;
       color: #03041b;
@@ -131,65 +249,74 @@
       padding: 14px 0;
       margin: 0 25px;
       white-space: nowrap;
+      background: 0 0;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
-      background: 0 0;
       &.active {
         color: #111bff;
         font-weight: 500;
+        background-color: #fff;
+        border-color: #dee2e6 #dee2e6 #fff;
         border-bottom: 2px solid #111bff;
       }
     }
   }
 }
-@media screen and (min-width: 1800px) {
-  .transactions {
-    .tabs {
-      justify-content: center;
+@media screen and (max-width: 1399px) {
+  .table-view tbody td {
+    min-width: 140px;
+  }
+}
+
+@media screen and (max-width: 978px) {
+  td,
+  th,
+  tr {
+    font-size: 0.9em;
+  }
+  .data-tab-container {
+    flex-direction: row;
+    .data-tab {
+      flex-direction: column;
+      padding-left: 16px;
+      &__item {
+        font-size: 0.78em;
+        margin: auto;
+      }
     }
   }
 }
 
-@media screen and (max-width: 1365px) {
-  .wallet {
-    &__item {
-      flex-wrap: wrap;
-      &__icon,
-      &__price {
-        flex: 0 0 50%;
+@media screen and (max-width: 767px) {
+  .desktop-view {
+    display: none !important;
+  }
+  .mobile-view {
+    display: flex !important;
+  }
+  .balance {
+    &__action {
+      & > .btn {
+        padding: 13px 30px;
       }
-      &__price {
-        text-align: left;
+    }
+    &__value strong {
+      font-size: 1.5em;
+    }
+  }
+}
+@media screen and (max-width: 575px) {
+  .balance {
+    &__action {
+      flex: 0 0 100%;
+      margin-top: 15px;
+      & > .btn {
+        display: block;
+        width: 100%;
       }
-      &__actions {
-        flex: 0 0 100%;
+      .btn + .btn {
         margin-right: 0;
-        text-align: center;
-        margin-top: 20px;
-      }
-      .available-balance {
-        line-height: 1.5;
-      }
-    }
-  }
-}
-@media screen and (max-width: 1199px) {
-  .transactions {
-    .tabs {
-      justify-content: flex-start;
-    }
-  }
-}
-@media screen and (max-width: 425px) {
-  .wallet {
-    &__item {
-      padding: 12px;
-      &__actions {
-        button {
-          margin-right: 5px;
-          padding-right: 20px;
-          padding-left: 20px;
-        }
+        margin-top: 8px;
       }
     }
   }
