--- a/src/assets/scss/_custome.scss
+++ b/src/assets/scss/_custome.scss
@@ -628,6 +628,24 @@ ul {
   background-image: none !important;
 }
 
+@media screen and (max-width: 978px) {
+  .container,
+  .container-fluid,
+  .container-xxl,
+  .container-xl,
+  .container-lg,
+  .container-md,
+  .container-sm {
+    --bs-gutter-x: 0;
+    --bs-gutter-y: 0;
+    width: 100%;
+    padding-right: calc(var(--bs-gutter-x) * 0.5);
+    padding-left: calc(var(--bs-gutter-x) * 0.5);
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .card .card-title {
     font-size: 1em;
