--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -375,9 +375,16 @@
           transition: all ease 0.1s;
         }
       }
-
       &:hover,
       &.active {
+        svg {
+          stroke: #111bff;
+        }
+        .sub-item {
+          color: #111bff;
+        }
+      }
+      &.bold-item {
         a {
           justify-content: flex-end;
           padding-bottom: 8px;
@@ -409,8 +416,8 @@
             stroke: #fff;
           }
           .sub-item {
-            margin-top: 30px;
-            font-size: 0.7rem;
+            margin-top: 40px;
+            font-size: 0.75rem;
             font-weight: 400;
             line-height: 1.6;
             text-transform: uppercase;
