--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -9,18 +9,6 @@
     padding: 40px 24px;
     margin-right: 225px;
   }
-  .menu-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 998;
-    opacity: 0;
-    visibility: hidden;
-    background-color: transparent;
-    transition: all 0.4s ease-out 0.1s;
-  }
 }
 
 .header {
@@ -443,6 +431,7 @@
     }
     ul {
       padding: 0;
+      justify-content: flex-start;
     }
     li {
       padding: 24px 8px;
@@ -454,7 +443,7 @@
       }
       &:hover,
       &.active {
-        background-color: #111bff;
+        background-color: #6b6b6b;
         .sub-item {
           color: #fff;
         }
