--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -428,8 +428,10 @@
     }
     &__wrapper {
       background-color: #fff;
+      width: 100vw;
     }
     ul {
+      width: 100%;
       padding: 0;
       justify-content: flex-start;
     }
