--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -431,7 +431,7 @@
       width: 100vw;
     }
     ul {
-      width: 100%;
+      width: 100vw;
       padding: 0;
       justify-content: flex-start;
     }
