--- a/src/assets/scss/components/Input/copyInput.module.scss
+++ b/src/assets/scss/components/Input/copyInput.module.scss
@@ -5,19 +5,21 @@
   background-color: #fff;
   border: 1px solid rgba(3, 4, 27, 0.1);
   box-shadow: none;
-  display: flow-root;
+  display: flex;
   border-radius: 10px;
   transition: all 150ms ease-in-out;
   direction: ltr;
   font-family: Arial, Helvetica, sans-serif;
   &__icon {
-    margin-left: 10px;
-    margin-right: 10px;
-    font-size: 15px;
-    color: #111bff;
+    margin-right: 0.5rem;
+    svg {
+      height: 16px;
+      width: 16px;
+      stroke: #111bff;
+    }
   }
   &__text {
-    font-size: 13px;
+    font-size: clamp(0.7rem, 0.5vw, 1rem);
   }
 }
 .btn-with-box {
@@ -40,10 +42,8 @@
   line-height: 1.5rem;
 }
 
-.iban__icon > img {
-  width: 24px;
-  height: auto;
-  object-fit: cover;
+.iban__icon > svg {
+  fill: #111bff;
   border-radius: 50%;
   margin-right: 5px;
 }
