fix details of transactions

--- a/src/assets/scss/dashboard/history.module.scss
+++ b/src/assets/scss/dashboard/history.module.scss
@@ -4,6 +4,7 @@
   border-radius: 8px;
   border: 1px solid #eee;
   overflow: hidden;
+  position: relative;
   .success {
     background-color: var(--bs-success);
     color: var(--bs-white);
