--- a/src/assets/scss/dashboard/invoice.module.scss
+++ b/src/assets/scss/dashboard/invoice.module.scss
@@ -11,6 +11,15 @@
     text-align: center;
     font-size: clamp(1rem, 1vw, 1.5rem);
   }
+  &__close {
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    width: 32px;
+    height: 32px;
+    stroke: #696969;
+    cursor: pointer;
+  }
   &__icon {
     text-align: center;
     svg {
