--- a/src/assets/scss/components/Table/index.module.scss
+++ b/src/assets/scss/components/Table/index.module.scss
@@ -22,23 +22,42 @@
     text-align: -webkit-center;
   }
   .th {
-    font-size: 0.875em;
+    font-size: clamp(0.8rem, 0.9vw, 1.2rem);
     font-weight: 500;
     color: rgba(3, 4, 27, 0.4);
     white-space: nowrap;
   }
-  .body .td {
-    font-size: 0.875em;
-    font-weight: 500;
-    color: #03041b;
-    border-bottom: 1px solid rgba(3, 4, 27, 0.05);
+  .body {
+    tr {
+      cursor: default;
+      &.clickable {
+        cursor: pointer;
+        transition: all ease-in 200ms;
+        &:hover,
+        &:active {
+          background-color: rgba(17, 27, 255, 0.1);
+          transition: all ease-out 200ms;
+        }
+      }
+      &.mobile {
+        display: none;
+      }
+      &.desktop {
+        display: table-row;
+      }
+    }
+    .td {
+      font-size: clamp(0.7rem, 0.8vw, 1rem);
+      font-weight: 500;
+      color: #03041b;
+      border-bottom: 1px solid rgba(3, 4, 27, 0.05);
+    }
   }
 
   &.small__view {
     .td,
     .th {
       padding: 10px 4px;
-      font-size: 0.75em;
     }
   }
 }
@@ -46,5 +65,40 @@
 @media screen and (max-width: 1399px) {
   .table .body .td {
     min-width: 140px;
+  }
+}
+
+@media screen and (max-width: 978px) {
+  .table .head {
+    display: none;
+  }
+  .table .body {
+    .tr {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 5px;
+      &.mobile,
+      &.mobile > td {
+        display: block;
+      }
+      &.desktop {
+        display: none;
+      }
+    }
+    .td {
+      border: none !important;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      &:before {
+        content: attr(data-th);
+        padding-left: 5px;
+        display: flow-root;
+      }
+    }
+  }
+  .table .head .th:not(.hasMobile),
+  .table .body .td:not(.hasMobile) {
+    display: none;
   }
 }
