--- a/src/assets/scss/components/mobileRecord.module.scss
+++ b/src/assets/scss/components/mobileRecord.module.scss
@@ -71,7 +71,7 @@
     }
     &__deal{
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: space-between;
       font-size: clamp(0.65rem, 0.8vw, 0.9rem);
     }
