--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -83,61 +83,80 @@
     }
   }
   &__profile {
+    position: relative;
     display: none;
     background-color: #111bff;
     border-radius: 50%;
     width: 24px;
     height: 24px;
-    a {
+    &__btn {
+      cursor: pointer;
       display: flex;
       color: #fff !important;
       justify-content: center;
       align-items: center;
       line-height: 1.3;
+      height: 100%;
     }
-    &__btn {
+    &__list {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 24px;
+      height: 24px;
+      background-color: #111bff;
+      z-index: -1;
+      border-radius: 50%;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
       a {
-        color: #ff1f11 !important;
-        padding: 10px;
-        font-size: 0.8rem;
-        &:not(:last-child) {
-          border-bottom: 1px solid #052b61;
-          color: #052b61 !important;
-          &:hover,
-          &:active {
-            background-color: #111bff;
+        height: 50px;
+        width: 150px;
+        font-size: clamp(0.8rem, 0.9vw, 1.2rem);
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: ease 200ms all;
+        &:first-child {
+          color: #052b61;
+          &:hover {
+            background-color: #052b61;
+            color: #fff;
           }
         }
-        &:hover,
-        &:active {
-          background-color: #ff1f11;
-          border-radius: 8px;
-          color: #fff !important;
+        &:last-child {
+          color: #ff1f11 !important;
           svg {
-            fill: #fff;
+            fill: #ff1f11;
+          }
+          &:hover {
+            background-color: #ff1f11;
+            color: #fff !important;
+            svg {
+              fill: #fff;
+            }
           }
         }
-        svg {
-          fill: #ff1f11;
-          width: 20px;
-          height: 20px;
-        }
       }
-      & > div {
-        margin-top: 15px;
-        margin-left: 5px;
-        & > div {
-          background-color: #fff;
-          display: flex;
-          flex-direction: column;
-          border-radius: 8px;
-          box-shadow: 1px 1px 1px #eee;
-        }
-        & > span::before {
-          border-bottom-color: #fff !important;
-          box-shadow: 1px 1px 1px #eee;
-        }
+      &.profile__open {
+        top: 200%;
+        width: auto;
+        height: auto;
+        background-color: #fff;
+        border-radius: 8px;
+        z-index: 1250;
+        box-shadow: 1px 1px 3px #eee;
       }
+    }
+    &__overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 1200;
     }
   }
   &__notification {
@@ -763,9 +782,6 @@ div.user-tier-card {
     }
     &__support {
       margin-left: 10px;
-      a > span:last-child {
-        display: none;
-      }
     }
     &__profile {
       display: block;
