--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -630,6 +630,23 @@ ul {
   background-image: none !important;
 }
 
+.overlay-redirect {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(22 22 35 / 80%);
+  width: 100vw;
+  height: 100vh;
+  z-index: 2000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
+
 @media screen and (max-width: 978px) {
   .container,
   .container-fluid,
