fix responsive of wallet modal and otp modal

--- a/src/assets/scss/components/Input/otpContainer.module.scss
+++ b/src/assets/scss/components/Input/otpContainer.module.scss
@@ -4,7 +4,9 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  max-width: 500px;
   border-radius: 10px;
+  margin: auto;
   margin-bottom: 20px;
   .otp-header {
     width: 100%;
