--- a/src/assets/scss/dashboard/wallet.module.scss
+++ b/src/assets/scss/dashboard/wallet.module.scss
@@ -79,11 +79,13 @@
     padding-left: 0;
     margin-bottom: 0;
     list-style: none;
+    justify-content: center;
     .nav-link {
       display: block;
       padding: 0.5rem 1rem;
       color: #111bff;
       text-decoration: none;
+      font-size: clamp(0.9rem, 1vw, 1.3rem);
       transition:
         color 0.15s ease-in-out,
         background-color 0.15s ease-in-out,
@@ -210,6 +212,11 @@
     .tabs {
       justify-content: flex-start;
     }
+  }
+}
+@media screen and (max-width: 978px) {
+  .hide {
+    display: none !important;
   }
 }
 @media screen and (max-width: 425px) {
