--- a/src/assets/scss/dashboard/exchange.module.scss
+++ b/src/assets/scss/dashboard/exchange.module.scss
@@ -225,8 +225,8 @@
     padding-right: 10px;
     margin-bottom: 3rem;
     svg {
-      fill: none;
-      stroke: #03041b;
+      stroke: none;
+      fill: #03041b;
     }
   }
 }
