--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -60,12 +60,13 @@
       span > svg {
         width: 24px;
         height: 24px;
-        fill: #696969;
+        stroke: #696969;
+        fill: none;
       }
     }
     &.active {
       span > svg {
-        fill: #111bff !important;
+        stroke: #111bff !important;
       }
     }
   }
@@ -122,7 +123,7 @@
         &:first-child {
           color: #052b61;
           &:hover {
-            background-color: #052b61;
+            background-color: #111bff;
             color: #fff;
           }
         }
@@ -266,11 +267,15 @@
       display: block;
       width: 100%;
       transition: all 200ms ease-out;
-      & > a > span {
-        padding: 0 5px;
-      }
-      & > a svg {
-        stroke: #03041b;
+      & > a {
+        font-size: clamp(0.8rem, 1vw, 1rem);
+        & > span {
+          padding: 0 5px;
+          svg {
+            width: 20px;
+            height: 20px;
+          }
+        }
       }
       &:before {
         display: block;
@@ -294,7 +299,7 @@
           color: #111bff;
           font-weight: 500;
           svg {
-            stroke: #111bff;
+            stroke: #111bff !important;
           }
         }
       }
@@ -450,7 +455,6 @@
       width: 100vw;
     }
     ul {
-      width: 100vw;
       padding: 0;
       justify-content: flex-start;
     }
@@ -641,6 +645,11 @@
   box-shadow: 0 2px 4px rgba(126, 142, 177, 0.12);
   transition: all 0.25s ease;
   margin-bottom: 1rem;
+  svg {
+    width: 20px !important;
+    height: 20px !important;
+    padding-left: 5px;
+  }
   &:hover {
     transform: translateY(-5px) scale(1.02);
     box-shadow: 0 5px 12px rgba(126, 142, 177, 0.2);
