--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -645,11 +645,14 @@
   box-shadow: 0 2px 4px rgba(126, 142, 177, 0.12);
   transition: all 0.25s ease;
   margin-bottom: 1rem;
-  svg {
-    width: 20px !important;
-    height: 20px !important;
+  & > span {
     padding-left: 5px;
+    svg {
+      width: 24px !important;
+      height: 24px !important;
+    }
   }
+
   &:hover {
     transform: translateY(-5px) scale(1.02);
     box-shadow: 0 5px 12px rgba(126, 142, 177, 0.2);
