fix image url build error and set some configs

--- a/src/assets/scss/components/Input/dropdown.module.scss
+++ b/src/assets/scss/components/Input/dropdown.module.scss
@@ -21,7 +21,7 @@
     height: 48px;
     line-height: 48px;
     font-weight: 400;
-    background-image: url(../../../img/icons/angle-down.svg);
+    background-image: url(/src/assets/img/icons/angle-down.svg);
     background-repeat: no-repeat;
     background-size: 12px 6px;
     background-position: 12px 50%;
