--- a/src/assets/scss/components/Input/exchangeInput.module.scss
+++ b/src/assets/scss/components/Input/exchangeInput.module.scss
@@ -61,7 +61,7 @@
     font-size: 0.75em;
     font-weight: 400;
     padding: 0 12px;
-    background-image: url(../../../img/icons/angle-down.svg);
+    background-image: url(/src/assets/img/icons/angle-down.svg);
     background-repeat: no-repeat;
     background-size: 12px 6px;
     background-position: 12px 50%;
