--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -268,6 +268,7 @@
       width: 100%;
       transition: all 200ms ease-out;
       & > a {
+        cursor: pointer;
         position: relative;
         &:before {
           display: block;
@@ -288,36 +289,21 @@
           }
         }
       }
-      & > span {
-        padding: 0 5px;
-        cursor: pointer;
-        svg {
-          fill: #03041b;
-          width: 14px;
-          height: 14px;
-          transform: rotate(180deg);
-          transition: all ease 200ms;
-        }
-        &.active-sub svg {
-          transform: rotate(0);
-        }
-      }
       &.active {
         & > a {
           border-radius: 10px;
-          color: #111bff;
+          color: #111bff !important;
           font-weight: 500;
           &:before {
             content: "";
           }
           svg {
             stroke: #111bff !important;
+            fill: #fff !important;
           }
         }
-        & > span {
-          svg {
-            fill: #111bff;
-          }
+        .arrow-icon > svg {
+          stroke: #111bff !important;
         }
       }
       & > span {
@@ -348,16 +334,34 @@
         height: 62px;
         line-height: 62px;
         color: #03041b;
-        padding: 0 25px;
+        padding: 0 25px 0 0;
       }
       .icon {
         margin-left: 10px;
+      }
+      .arrow-icon {
+        position: absolute;
+        left: 5px;
+        top: 20px;
+        cursor: pointer;
+        & > svg {
+          width: 11px !important;
+          height: 6px !important;
+          transform: rotate(180deg);
+          transition: all ease 200ms;
+        }
+        &.active-sub svg {
+          transform: rotate(0);
+        }
       }
       .submenu {
         padding-right: 50px;
         a {
           padding-right: 10px;
-          font-size: 0.8rem;
+          color: #656571;
+        }
+        & > .active_sub a {
+          color: #111bff;
         }
       }
     }
