--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -257,11 +257,11 @@
     scrollbar-width: none;
   }
   &__navbar {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: flex-start;
-    margin-bottom: auto;
+    display: flex !important;
+    align-items: flex-start !important;
+    justify-content: flex-start !important;
+    margin-bottom: auto !important;
+    flex-wrap: nowrap !important;
     &__item {
       position: relative;
       display: block;
@@ -331,8 +331,8 @@
       }
       a {
         display: block;
-        height: 62px;
-        line-height: 62px;
+        height: 50px;
+        line-height: 40px;
         color: #03041b;
         padding: 0 25px 0 0;
       }
@@ -342,7 +342,7 @@
       .arrow-icon {
         position: absolute;
         left: 5px;
-        top: 20px;
+        top: 15%;
         cursor: pointer;
         & > svg {
           width: 11px !important;
@@ -359,6 +359,7 @@
         a {
           padding-right: 10px;
           color: #656571;
+          height: 40px;
         }
         & > .active_sub a {
           color: #111bff;
