--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -342,7 +342,8 @@
       .arrow-icon {
         position: absolute;
         left: 5px;
-        top: 15%;
+        top: 0;
+        margin-top: 5%;
         cursor: pointer;
         & > svg {
           width: 11px !important;
