--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -1,6 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
 :root {
   --bs-blue: #335ffc;
   --bs-indigo: #6610f2;
@@ -128,6 +125,146 @@ html {
   --bs-form-valid-border-color: #198754;
   --bs-form-invalid-color: #dc3545;
   --bs-form-invalid-border-color: #dc3545;
+  // new
+  --body: rgba(255, 255, 255, 1);
+  --white: rgba(245, 245, 245, 1);
+  --dark-blue: rgba(0, 87, 206, 1);
+  --title: rgba(218, 226, 255, 1);
+  --advbg1: rgba(218, 226, 255, 1);
+  --advbg2: rgba(232, 222, 248, 1);
+  --advbg3: rgba(255, 216, 228, 1);
+  --advbg4: rgba(255, 218, 212, 1);
+  --advbg1-text: rgba(0, 25, 70, 1);
+  --advbg2-text: rgba(29, 25, 43, 1);
+  --advbg3-text: rgba(49, 17, 29, 1);
+  --advbg4-text: rgba(63, 3, 0, 1);
+  --text-black: rgba(26, 26, 26, 1);
+  --text-gray: rgba(70, 70, 70, 1);
+  --border: rgba(118, 118, 118, 1);
+  --button-text: rgba(255, 251, 254, 1);
+  --light-gray: rgba(237, 237, 237, 1);
+  --switch-active: rgba(0, 0, 0, 0.08);
+  --select: rgba(230, 230, 230, 1);
+  --green: rgba(32, 109, 0, 1);
+  --red: rgba(179, 38, 30, 1);
+  --term-green: rgba(154, 250, 116, 1);
+  --term-red: rgba(249, 222, 220, 1);
+  --term-red-text: rgba(65, 14, 11, 1);
+  --term-green-text: rgba(5, 33, 0, 1);
+  --acc-border: rgba(196, 196, 196, 1);
+  --commission1: rgba(125, 82, 96, 1);
+  --commission2: rgba(98, 91, 113, 1);
+  --dark-blue-hover: rgba(0, 80, 190);
+  --login-hover: rgba(235, 235, 235);
+  --link-hover: rgb(15 15 15 / 11%);
+
+  --font_44: 44px;
+  --font_36: 36px;
+  --font_30: 30px;
+  --font_25: 25px;
+  --font_20: 20px;
+  --font_18: 18px;
+  --font_16: 16px;
+  --font_14: 14px;
+  --font_12: 12px;
+}
+
+.theme-dark {
+  --body: rgba(15, 15, 15, 1);
+  --white: rgba(26, 26, 26, 1);
+  --dark-blue: rgba(177, 197, 255, 1);
+  --title: rgba(218, 226, 255, 1);
+  --advbg1: rgba(0, 65, 158, 1);
+  --advbg2: rgba(74, 68, 88, 1);
+  --advbg3: rgba(99, 59, 72, 1);
+  --advbg4: rgba(129, 39, 25, 1);
+  --advbg1-text: rgba(218, 226, 255, 1);
+  --advbg2-text: rgba(232, 222, 248, 1);
+  --advbg3-text: rgba(255, 216, 228, 1);
+  --advbg4-text: rgba(255, 218, 212, 1);
+  --text-black: rgba(224, 224, 224, 1);
+  --text-gray: rgba(196, 196, 196, 1);
+  --border: rgba(144, 144, 144, 1);
+  --button-text: rgba(0, 44, 112, 1);
+  --light-gray: rgba(32, 32, 32, 1);
+  --switch-active: rgba(255, 255, 255, 0.08);
+  --select: rgba(41, 41, 41, 1);
+  --green: rgba(127, 220, 91, 1);
+  --red: rgba(242, 184, 181, 1);
+  --term-green: rgba(22, 82, 0, 1);
+  --term-red: rgba(99, 59, 72, 1);
+  --term-red-text: rgba(249, 222, 220, 1);
+  --term-green-text: rgba(154, 250, 116, 1);
+  --acc-border: rgba(70, 70, 70, 1);
+  --commission1: rgba(239, 184, 200, 1);
+  --commission2: rgba(204, 194, 220, 1);
+  --dark-blue-hover: rgba(163, 181, 235);
+  --login-hover: rgba(34, 34, 34);
+  --link-hover: rgb(255 255 255 / 11%);
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  direction: rtl;
+  font-family: "iransansFont";
+}
+
+html,
+body {
+  scroll-behavior: smooth;
+  max-width: 100vw;
+}
+
+button,
+label {
+  cursor: pointer;
+  outline: none;
+}
+
+textarea {
+  resize: none;
+}
+
+input,
+textarea,
+select {
+  outline: none;
+  color: var(--text-black);
+  font-size: var(--font_14);
+}
+
+input::placeholder {
+  color: var(--text-black);
+  font-size: var(--font_14);
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  width: fit-content;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  direction: rtl !important;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #e0e0e0;
+  border-radius: 10px;
+  direction: ltr !important;
+}
+
+ul {
+  list-style: none;
 }
 
 .btn {
@@ -690,5 +827,32 @@ ul {
 @media screen and (max-width: 575px) {
   .btn {
     --bs-btn-font-size: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 904px) {
+  :root {
+    --font_44: 36px;
+    --font_36: 30px;
+    --font_25: 25px;
+    --font_20: 20px;
+    --font_18: 18px;
+    --font_16: 16px;
+    --font_14: 14px;
+    --font_12: 12px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  :root {
+    --font_44: 30px;
+    --font_36: 22px;
+    --font_30: 20px;
+    --font_25: 25px;
+    --font_20: 20px;
+    --font_18: 18px;
+    --font_16: 14px;
+    --font_14: 14px;
+    --font_12: 12px;
   }
 }
