--- a/src/layouts/Landing/Footer/Footer.module.css
+++ b/src/layouts/Landing/Footer/Footer.module.css
@@ -30,12 +30,12 @@
   gap: 6px;
   align-items: center;
   font-weight: 700;
-  font-family: 'iransansFontDemiBold';
+  font-family: "iransansFontDemiBold";
   text-align: justify;
 }
 
 .footer_about .footer_about_title::before {
-  content: '';
+  content: "";
   width: 24px;
   height: 32px;
   display: inline-flex;
@@ -58,7 +58,7 @@
   font-weight: 500;
   color: var(--text-black);
   margin-bottom: 5px;
-  font-family: 'iransansFontDemiBold';
+  font-family: "iransansFontDemiBold";
 }
 
 .footer_menu_list li a {
@@ -68,13 +68,13 @@
   display: block;
   position: relative;
   transition: 0.3s;
-  font-family: 'iransansFontDemiBold';
+  font-family: "iransansFontDemiBold";
   position: relative;
 }
 
 .footer_menu_list li a::after,
 .footer_info .contact_us li:not(:last-child)::after {
-  content: '';
+  content: "";
   width: 100%;
   height: 1px;
   background: transparent;
@@ -114,7 +114,7 @@
   border-radius: 4px;
   border: 1px solid var(--dark-blue);
   height: fit-content;
-  font-family: 'iransansFontDemiBold';
+  font-family: "iransansFontDemiBold";
 }
 
 .footer_info {
@@ -135,10 +135,10 @@
   width: fit-content;
   position: relative;
   align-items: center;
-  font-family: 'iransansFontDemiBold';
+  font-family: "iransansFontDemiBold";
 }
 
-.footer_info .contact_us li svg {
+.footer_info .contact_us li img {
   min-width: 16px;
   height: 16px;
 }
@@ -151,7 +151,7 @@
   color: var(--text-gray);
   margin-top: 48px;
   margin-bottom: 20px;
-  font-family: 'iransansFontDemiBold';
+  font-family: "iransansFontDemiBold";
 }
 
 @media (min-width: 767px) and (max-width: 1200px) {
