--- a/src/assets/scss/landing/new-home.module.scss
+++ b/src/assets/scss/landing/new-home.module.scss
@@ -497,7 +497,7 @@
   content: "";
   width: 32px;
   height: 32px;
-  background-image: url(../../public/images/hand.png);
+  background-image: url(/src/assets/img/icons/hand.png);
   display: inline-flex;
   margin-top: -12px;
 }
