--- a/src/pages/Home/Blog/Blog.module.css
+++ b/src/pages/Home/Blog/Blog.module.css
@@ -64,7 +64,7 @@
 }
 
 .more:after {
-  content: '';
+  content: "";
   background-image: url("data:image/svg+xml,%3Csvg width='16' height='17' viewBox='0 0 16 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clipPath='url(%23clip0_3955_15527)'%3E%3Cpath d='M10.2734 5.40289L9.33337 4.46289L5.33337 8.46289L9.33337 12.4629L10.2734 11.5229L7.22004 8.46289L10.2734 5.40289Z' fill='%230057CE'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_3955_15527'%3E%3Crect width='16' height='16' fill='white' transform='translate(0 0.462891)'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
   width: 16px;
   height: 16px;
@@ -115,7 +115,7 @@
 
 .blog3 {
   grid-row: span 2;
-  background-image: url(../../public/images/Element\ 3.png);
+  background-image: url(/src/assets/img/Element3.png);
 }
 
 .blog3 p {
@@ -125,11 +125,11 @@
 .blog2 {
   grid-column: span 2;
   grid-row: span 1;
-  background-image: url(../../public/images/Element\ container.png);
+  background-image: url(/src/assets/img/Element-container.png);
 }
 
 .bg {
-  background-image: url(../../public/images/Element\ container\ \(1\).png);
+  background-image: url(/src/assets/img/Element-container1.png);
 }
 
 @media screen and (max-width: 904px) {
