--- a/components/TableT1/TableT1.module.css
+++ b/components/TableT1/TableT1.module.css
@@ -111,9 +111,11 @@
 }
 
 .currency_img {
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  object-fit: cover;
+  border-radius: 50% !important;
+  background-color: azure;
 }
 
 .currency_name {
