--- a/components/index/index.module.css
+++ b/components/index/index.module.css
@@ -64,6 +64,7 @@
   left: 50%;
   transform: translatex(-50%);
   max-width: 85%;
+  width: 100%;
   display: block;
   margin-top: 70px;
   height: auto;
