--- a/components/Table/Table.module.css
+++ b/components/Table/Table.module.css
@@ -71,7 +71,7 @@
   align-items: center;
   gap: 5px;
   margin-top: 8px;
-  justify-content: center;
+  justify-content: flex-end;
   color: var(--text-black);
   font-size: var(--font_16);
   font-weight: 500;
