--- a/components/SelectBox/SelectBox.module.css
+++ b/components/SelectBox/SelectBox.module.css
@@ -33,6 +33,7 @@
 
 .options_list {
   position: absolute;
+  z-index: 20;
   width: 100%;
   box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.25);
   background-color: var(--select);
