--- a/components/SocialMedia/SocialMedia.module.css
+++ b/components/SocialMedia/SocialMedia.module.css
@@ -17,3 +17,9 @@
 .social_media a:hover {
   background-color: var(--select);
 }
+
+@media screen and (max-width: 767px) {
+  .social_media {
+    justify-content: center;
+  }
+}
